2007-02-08  Richard Dale  <rdale@foton.es>

	* Added a first attempt at setting up the strongReferenceMap and calling
	  destructors. A boolean function CreateStrongReference() checks whether
	  or not a strong reference is needed when a new instance has been
	  constructed. Another function is needed to checked whether the C++
	  instance still has a parent or container, and not delete if it has.

	* Currently apps crash on exit, but the Qyoto.DeleteQApp()
	  hack shouldn't be need anymore once destructors are working.

2007-02-08  Arno Rehn  <arno@arnorehn.de>

	* Fixed names of flags in Qyoto.cs
	* Modified CMakeLists.txt to output more infos and to get out-of-source-dir
	  builds working

2007-02-08  Richard Dale  <rdale@foton.es>

	* Fixed bugs in the debug dump of QMetaObjects created at runtime
	* Normalized some code layout
	* Only QApplication and QCoreApplication destructors are now called
	* Added a strongReferenceMap to hold a mapping from a C++ pointer to
	  a C# instance. It is used to prevent garbage collection for instances
	  which are contained in another instance, such as a QObject with a
	  parent, even when there are no references to the child within the C#
	  Qyoto application code. When the parent finally deletes the child on 
	  the C++ side, the reference is removed from the Dictionary by the 
	  SmokeMarshallers.UnmapPointer() method.
	* Renamed the QTDB_METHOD_MISSING debugging flag as QTDB_TRANSPARENT_PROXY

2007-02-07  Richard Dale  <rdale@foton.es>

	* Added a Debug.DebugChannel() method to get debug setting in C#

2007-02-06  Richard Dale  <rdale@foton.es>

	* Added a QPair struct corresponding to the C++ one, and generate
	  method calls with arguments that use it
	* Generate accessor methods for static variables and instance variables
	* Added the widgets/analogclock example
	* Fixed bug in marshalling QVector types with an unitialise variable in
	  a for loop
	* Added QMin() and QMax() methods